--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,15 @@ dependencies:
   shared_preferences: ^2.2.0
   flutter_svg: ^2.0.7
   get: ^4.6.5
+  crypto: ^3.0.3
+  another_flushbar: ^1.12.30
+  geolocator: ^11.0.0
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.14
+  #  hive database generator
+  hive_generator: ^1.1.2
+  build_runner: ^2.1.7
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +74,7 @@ flutter:
   assets:
     - assets/images/jpg_png_imgs/
     - assets/images/svg_imgs/
+    - assets/data/user_data.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -77,10 +87,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: cera_pro_regular
+      fonts:
+        - asset: assets/fonts/cera_pro_regular.otf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
