--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   #  hive database generator
   hive_generator: ^1.1.2
   build_runner: ^2.1.7
+  intl: ^0.19.0
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
 
 dev_dependencies:
   flutter_test:
